# TPG

./: LICENSE  README.md
project/: CMakeLists.txt  main.cpp
project/src/: CMakeLists.txt  menu.cpp  menu.h
project/src/dialogs/: sussy.dia
project/src/inputSystem/: CMakeLists.txt  inputManager.cpp  inputManager.h
